tests/pass/Complement.java
package pass;

public class Complement {

	public int complement(int x) {
		return ~x;
	}

}
